[tool.poetry]
name = "advent_2022"
version = "0.1.0"
description = ""
authors = ["Riccardo Tesselli <riccardo.tesselli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^9.0.0"
numpy = "^1.23.5"
tqdm = "^4.64.1"
astar = "^0.94"
Dijkstar = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
